first half of Update Task
the problem is when after doing the List Schedule, I get the table how to transfer the information from the row of the table to the next JSP (form). I did do that here.
NEXT : I have to finish to implement the update, and to do the login.

--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -4,10 +4,13 @@
  spring.mvc.view.prefix=/WEB-INF/jsp/
  spring.mvc.view.suffix=.jsp
  
- spring.datasource.url=jdbc:sqlserver://localhost;databaseName=timesched
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=timesched
 spring.datasource.username=standardUser
 spring.datasource.password=bird2018
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto = create-drop
+
+# ?????????????????????????????????????????????????????????
+# I don't think I need these three lines - DELETE these 3 lines
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.hibernate.ddl-auto = create-drop
